prevented overflow in comments on mobile

--- a/src/scss/_comments.scss
+++ b/src/scss/_comments.scss
@@ -26,5 +26,7 @@
         border-left: 4px solid rgba(#ccc, 0.2);
         padding-left: 1rem;
         line-height: 1.3;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
     }
 }
